--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Jeff Stafford <jeff.stafford@queensu.ca>
 # install python3 and django
 RUN yum makecache fast \
 	&& yum -y install python34 python34-pip python34-Cython python34-devel \
-	&& pip3 install django
+	&& pip3 install django ipython
 
 # install pyslurm on python 3
 RUN cd ~ \
