--- a/environment.yml
+++ b/environment.yml
@@ -13,5 +13,7 @@ dependencies:
 - wheel=0.29.0=py35_0
 - xz=5.2.2=1
 - zlib=1.2.8=3
+- pip:
+  - django-bootstrap3==8.2.3
 prefix: /opt/anaconda3/envs/dashing
 
