--- a/environment.yml
+++ b/environment.yml
@@ -15,5 +15,8 @@ dependencies:
 - zlib=1.2.8=3
 - pip:
   - django-bootstrap3==8.2.3
+  - requests==2.13.0
+  - snakemake==3.11.2
+  - wrapt==1.10.10
 prefix: /opt/anaconda3/envs/dashing
 
