--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ MAINTAINER Jeff Stafford <jeff.stafford@queensu.ca>
 
 # install python3 and django
 RUN yum makecache fast \
-	&& yum -y install python34 python34-pip python34-Cython python34-devel redis
+	&& yum -y install python34 python34-pip python34-Cython python34-devel python34-numpy redis
 RUN pip3 install django ipython snakemake celery redis
 
 # install pyslurm on python 3
